--- a/section-60/day-57/day-57-starting-files-blog-templating/templates/post.html
+++ b/section-60/day-57/day-57-starting-files-blog-templating/templates/post.html
@@ -16,14 +16,14 @@
       </div>
       <div class="content">
         <div class="card">
-          <h1>{{ post['title'] }}</h1>
-          <h2>{{ post['subtitle'] }}</h2>
-          <p>{{ post['body'] }}</p>
+          <h1>{{ posts["title"] }}</h1>
+          <h2>{{ posts["subtitle"] }}</h2>
+          <p>{{ posts["body"] }}</p>
         </div>
       </div>
     </div>
   </body>
   <footer>
-    <p>Made with ♥️ in Utah.</p>
+    <p>Made with ♥️ in London.</p>
   </footer>
 </html>
