--- a/section-60/day-57/day-57-starting-files-blog-templating/templates/index.html
+++ b/section-60/day-57/day-57-starting-files-blog-templating/templates/index.html
@@ -14,18 +14,18 @@
       <div class="top">
         <div class="title"><h1>My Blog</h1></div>
       </div>
-      {% for post in all_posts %}
+      {% for blog_post in posts: %}
       <div class="content">
         <div class="card">
-          <h2>{{ post['title'] }}</h2>
-          <p class="text">{{ post['subtitle'] }}</p>
-          <a href="{{ url_for('post_endpoint', post_id=post['id'] )}}">Read</a>
+          <h2>{{ blog_post["title"] }}</h2>
+          <p class="text">{{ blog_post["subtitle"] }}</p>
+          <a href="{{ url_for('get_post', num=blog_post['id']) }}">Read</a>
         </div>
       </div>
       {% endfor %}
     </div>
   </body>
   <footer>
-    <p>Made with ♥️ in Utah.</p>
+    <p>Made with ♥️ in London.</p>
   </footer>
 </html>
